@@ -1,5 +1,10 @@
 2003-10-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
+	* gtk/ThreadNotify.cs: close the pipe and detach the GSource when
+	explicitly requested or finalized.
+
+2003-10-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
 	* gconf/tools/schemagen.cs: support for lists.
 
 2003-10-15  Mike Kestner  <mkestner@ximian.com>
